--- a/resorses/style.css
+++ b/resorses/style.css
@@ -54,3 +54,22 @@ nav ul li a:hover {
   color: black;
 }
 
+/* Main CSS */
+
+
+
+
+
+/* FOOOTER CSS */
+footer {
+    background-color: rgb(89, 215, 250);
+    color: #fff;
+    text-align: center;
+    position: fixed; 
+    bottom: 0; 
+    width: 100%; 
+}
+footer p{
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+}
