--- a/resorses/style.css
+++ b/resorses/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Agbalumo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&display=swap");
 
 /* Reset CSS */
 html,
@@ -36,6 +37,9 @@ h4,
 h5,
 h6 {
   font-family: "Agbalumo", system-ui;
+}
+p {
+  font-family: "Bevan", serif;
 }
 /* Navigation Bar CSS */
 
@@ -104,6 +108,33 @@ nav ul li a:hover {
 
 .popular-games h2 {
   font-size: 100px;
+}
+.popular-games p {
+  font-size: 30px;
+}
+
+.games-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: space-evenly;
+  list-style: none;
+}
+
+.games-row li {
+  margin: 10px;
+  text-align: center;
+}
+
+.games-row li img{
+  width: 400px;
+  height: 600px;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 1); 
+  margin-bottom: 30px;
+  transition: transform 0.5s ease;
+}
+.games-row li img:hover{
+    transform: scale(1.03);
 }
 
 /* FOOOTER CSS */
