--- a/resorses/style.css
+++ b/resorses/style.css
@@ -108,8 +108,8 @@ h3,
 h4,
 h5,
 h6 {
-  /* text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 2px 0 #fff,
-    1px 1px 0 #fff; */
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 2px 0 #fff,
+    1px 1px 0 #fff;
     color: #000000;
     font-size: 20px;
 }
