--- a/resorses/register.css
+++ b/resorses/register.css
@@ -60,10 +60,9 @@ main {
 .register_el {
   display: flex;
   align-items: center;
-  border: 10px solid #3C5D61;
-  border-radius: 10px;
-  background-color: #3C5D61;
-  box-shadow: 20px 20px 50px rgba(0, 0, 0, 1);
+  border-radius: 30px;
+  /* background-color: #3C5D61; */
+  box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.8);
 }
 
 .image-el {
@@ -71,8 +70,11 @@ main {
 }
 
 .image-el img {
+  border-radius: 30px;
+  padding: 10px;
   width: 800px;
   height: auto;
+  box-shadow: 10px 10px 100px rgba(0, 0, 0, 1);
 }
 .form_el {
   margin: 100px 100px 100px;
@@ -108,7 +110,7 @@ label {
 
   border: 5px solid rgb(0, 0, 0);
   border-radius: 20px;
-  background-color: #2288be;
+  background-color: #3c5d61;
   color: rgb(255, 255, 255);
   text-shadow: -3px -3px 0 #000, 3px -3px 0 #000, -3px 4px 0 #000,
     2px 2px 0 #000;
