Minor changes on nav and store

--- a/resorses/style_store.css
+++ b/resorses/style_store.css
@@ -43,7 +43,7 @@ p {
 }
 
 body {
-  background-image: url("./images/Store_Background.png");
+  background-image: url("./images/BackGroud.png");
 }
 
 .banner img {
