--- a/playtopia/src/app/core/nav/nav.component.html
+++ b/playtopia/src/app/core/nav/nav.component.html
@@ -1,1 +1,16 @@
-<p>nav works!</p>
+    <nav>
+    <div class="left-item">
+        <img src="../../../assets/Logo nav.png" alt="Logo" />
+    </div>
+    <ul class="right-items">
+        <li><a href="#">Store</a></li>
+        <li><a href="#">Add Game</a></li>
+        <li><a href="#">About</a></li>
+        <li>
+        <img
+            src="../../../assets/Profile Img nav.png"
+            alt="Profile"
+        />
+        </li>
+    </ul>
+    </nav>
