--- a/playtopia/src/app/main/main.component.html
+++ b/playtopia/src/app/main/main.component.html
@@ -1,1 +1,81 @@
-<p>main works!</p>
+<main class="main">
+  <div class="banner">
+    <img src="../../assets/BANNER.png" alt="BANNER" />
+  </div>
+
+  <div class="popular-games-title">
+    <h2>POPULAR GAMES</h2>
+    <p>CHOOSE YOUR OWN</p>
+  </div>
+
+  <div>
+    <ul class="popular-games-row">
+      <li>
+        <img
+          src="https://upload.wikimedia.org/wikipedia/en/b/be/World_of_Warcraft_Wrath_of_the_Lich_King.png"
+          alt="World_of_Warcraft_Wrath_of_the_Lich_King"
+        />
+        <p>World of Warcraft: Wrath of the Lich King</p>
+      </li>
+      <li>
+        <img
+          src="https://cdn.europosters.eu/image/1300/posters/the-last-of-us-2-ellie-i76718.jpg"
+          alt="The_Last_Of_Us"
+        />
+        <p>The Last Of Us Part 2</p>
+      </li>
+      <li>
+        <img
+          src="https://upload.wikimedia.org/wikipedia/en/d/d2/Don%27t_Starve_cover.jpg"
+          alt="Don't_Starve"
+        />
+        <p>Don't Starve</p>
+      </li>
+    </ul>
+  </div>
+
+  <div class="popular-games-title">
+    <h2>OTHER GAMES</h2>
+  </div>
+
+  <div>
+    <ul class="other-games-row">
+      <li>
+        <img
+          src="https://gameday.bg/wp-content/uploads/2020/11/nier-automata-goty-pc-01.jpg"
+          alt="Nier_Automata"
+        />
+        <p>Nier: Automata</p>
+      </li>
+
+      <li>
+        <img
+          src="https://blog.playstation.com/uploads/2024/01/bb4d6dc48cb2b4613432dfc197c0081a26474c2c.jpeg"
+          alt="Horizon_Forbidden_West"
+        />
+        <p>Horizon Forbidden West</p>
+      </li>
+      <li>
+        <img
+          src="https://s3.amazonaws.com/prod-media.gameinformer.com/styles/product_box_art/s3/2018/07/26/a87590d4/uncharted4.jpg"
+          alt="Uncharted_4"
+        />
+        <p>Uncharted 4</p>
+      </li>
+      <li>
+        <img
+          src="https://cdn1.epicgames.com/offer/3ddd6a590da64e3686042d108968a6b2/EGS_GodofWar_SantaMonicaStudio_S2_1200x1600-fbdf3cbc2980749091d52751ffabb7b7_1200x1600-fbdf3cbc2980749091d52751ffabb7b7"
+          alt="God_Of_War"
+        />
+        <p>God of War</p>
+      </li>
+      <li>
+        <img
+          src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S2_03_1200x1600-b1847981214ac013383111fc457eb9c5"
+          alt="Cyberpunk_2077"
+        />
+        <p>Cyberpunk 2077</p>
+      </li>
+    </ul>
+  </div>
+</main>
