Imported About Component Html and CSS

--- a/playtopia/src/app/about/about.component.html
+++ b/playtopia/src/app/about/about.component.html
@@ -1,1 +1,25 @@
-<p>about works!</p>
+<body>
+    <main>
+      <div class="article">
+        <h1>AB</h1>
+        <h1>OUT US</h1>
+      </div>
+      <div class="about_container">
+        <img src="../../assets/About_us_Baner.png" alt="" />
+        <div>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt illo
+            reprehenderit nisi nam tenetur ea similique aut repudiandae ratione
+            eveniet! Omnis aut iste, exercitationem minus corrupti eum dolor
+            corporis officia quam distinctio hic quasi fugit excepturi ipsam,
+            quidem reprehenderit ut maxime voluptates optio cupiditate
+            consequuntur nisi eligendi. Eaque voluptatibus in eos commodi
+            dignissimos ut libero dolorem magni debitis. Sunt nostrum quidem aut
+            alias. Consequatur modi nemo, excepturi maiores cumque commodi aut,
+            aperiam cupiditate quia, fugiat nam eius accusantium consectetur
+            obcaecati.
+          </p>
+        </div>
+      </div>
+    </main>
+  </body>
