--- a/playtopia/src/app/register/register.component.html
+++ b/playtopia/src/app/register/register.component.html
@@ -1,1 +1,46 @@
-<p>register works!</p>
+<body>
+    <main>
+
+        <div class="register_el">
+          <div class="image-el">
+            <img src="../../assets/Register_page.jpg" alt="register_image" />
+          </div>
+          <div class="form_el">
+            <form action="">
+              <label for="username">Username:</label>
+              <input
+                type="text"
+                id="username"
+                name="username"
+                placeholder="gamer123..."
+              />
+    
+              <label for="email">Email:</label>
+              <input
+                type="text"
+                id="email"
+                name="email"
+                placeholder="email@pmail..."
+              />
+    
+              <label for="password">Password:</label>
+              <input
+                type="password"
+                name="password"
+                id="password"
+                placeholder="*****"
+              />
+    
+              <label for="re_password">Repeat Password:</label>
+              <input
+                type="password"
+                name="re_password"
+                id="re_password"
+                placeholder="*****"
+              />
+              <input type="submit" value="Register" id="button"/>
+            </form>
+          </div>
+        </div>
+    </main>
+  </body>
