--- a/playtopia/src/app/login/login.component.html
+++ b/playtopia/src/app/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<body>
+  <main>
+    <div class="register_el">
+      <div class="image-el">
+        <img src="../../assets/Register_page.jpg" alt="register_image" />
+      </div>
+      <div class="form_el">
+        <form action="">
+          <label for="username">Username:</label>
+          <input
+            type="text"
+            id="username"
+            name="username"
+            placeholder="gamer123..."
+          />
+
+          <label for="password">Password:</label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="*****"
+          />
+          <input type="submit" value="Login" id="button" />
+        </form>
+      </div>
+    </div>
+  </main>
+</body>
