--- a/playtopia/src/app/core/nav/nav.component.html
+++ b/playtopia/src/app/core/nav/nav.component.html
@@ -3,14 +3,18 @@
         <img src="../../../assets/Logo nav.png" alt="Logo" />
     </div>
     <ul class="right-items">
-        <li><a href="#">Store</a></li>
-        <li><a href="#">Add Game</a></li>
-        <li><a href="#">About</a></li>
+        <li><a routerLink="/store">Store</a></li>
+        <li><a routerLink="/add_game">Add Game</a></li>
+        <li><a routerLink="/about">About</a></li>
         <li>
-        <img
-            src="../../../assets/Profile Img nav.png"
-            alt="Profile"
-        />
+            <div>
+                <a routerLink="/register">
+                <img
+                    src="../../../assets/Profile Img nav.png"
+                    alt="Profile"
+                />
+                </a>
+            </div>
         </li>
     </ul>
     </nav>
