--- a/playtopia/src/app/login/login.component.css
+++ b/playtopia/src/app/login/login.component.css
@@ -18,6 +18,7 @@ main {
   border-radius: 30px;
   /* background-color: #3C5D61; */
   box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.8);
+  margin: 100px;
 }
 
 .image-el {
