--- a/playtopia/src/app/core/nav/nav.component.html
+++ b/playtopia/src/app/core/nav/nav.component.html
@@ -1,20 +1,19 @@
-    <nav>
-    <div class="left-item">
-        <img src="../../../assets/Logo nav.png" alt="Logo" />
-    </div>
-    <ul class="right-items">
-        <li><a routerLink="/store">Store</a></li>
-        <li><a routerLink="/add_game">Add Game</a></li>
-        <li><a routerLink="/about">About</a></li>
-        <li>
-            <div>
-                <a routerLink="/register">
-                <img
-                    src="../../../assets/Profile Img nav.png"
-                    alt="Profile"
-                />
-                </a>
-            </div>
-        </li>
-    </ul>
-    </nav>
+<nav>
+  <div class="left-item">
+    <a routerLink="/home">
+      <img src="../../../assets/Logo nav.png" alt="Logo" />
+    </a>
+  </div>
+  <ul class="right-items">
+    <li><a routerLink="/store">Store</a></li>
+    <li><a routerLink="/add_game">Add Game</a></li>
+    <li><a routerLink="/about">About</a></li>
+    <li>
+      <div>
+        <a routerLink="/register">
+          <img src="../../../assets/Profile Img nav.png" alt="Profile" />
+        </a>
+      </div>
+    </li>
+  </ul>
+</nav>
