--- a/playtopia/src/app/register/register.component.css
+++ b/playtopia/src/app/register/register.component.css
@@ -12,6 +12,19 @@ main {
   align-items: center;
 }
 
+p{
+  font-size: 30px;
+  color: white;
+  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 4px 0 #000,
+  2px 2px 0 #000;
+}
+#login_p:hover{
+  text-shadow: -2px -2px 0 #ffffff, 2px -2px 0 #ffffff, -2px 4px 0 #ffffff,
+  2px 2px 0 #ffffff;
+color: #000000;
+cursor: pointer;
+}
+
 .register_el {
   display: flex;
   align-items: center;
