Minor Styling Changes

--- a/playtopia/src/app/store/store.component.html
+++ b/playtopia/src/app/store/store.component.html
@@ -41,127 +41,148 @@
 
       <div>
         <ul class="other-games-row">
-          
           <li>
+            <a routerLink="/details">
             <img
               src="https://gameday.bg/wp-content/uploads/2020/11/nier-automata-goty-pc-01.jpg"
               alt="Nier_Automata"
             />
+            </a>
             <p>Nier: Automata</p>
           </li>
-          
+    
           <li>
+            <a routerLink="/details">
             <img
               src="https://blog.playstation.com/uploads/2024/01/bb4d6dc48cb2b4613432dfc197c0081a26474c2c.jpeg"
               alt="Horizon_Forbidden_West"
             />
+            </a>
             <p>Horizon Forbidden West</p>
           </li>
           <li>
+            <a routerLink="/details">
             <img
               src="https://s3.amazonaws.com/prod-media.gameinformer.com/styles/product_box_art/s3/2018/07/26/a87590d4/uncharted4.jpg"
               alt="Uncharted_4"
             />
+            </a>
             <p>Uncharted 4</p>
           </li>
           <li>
+            <a routerLink="/details">
             <img
               src="https://cdn1.epicgames.com/offer/3ddd6a590da64e3686042d108968a6b2/EGS_GodofWar_SantaMonicaStudio_S2_1200x1600-fbdf3cbc2980749091d52751ffabb7b7_1200x1600-fbdf3cbc2980749091d52751ffabb7b7"
               alt="God_Of_War"
             />
+            </a>
             <p>God of War</p>
           </li>
           <li>
+            <a routerLink="/details">
             <img
               src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S2_03_1200x1600-b1847981214ac013383111fc457eb9c5"
               alt="Cyberpunk_2077"
             />
+            </a>
             <p>Cyberpunk 2077</p>
           </li>
-        </ul>
-      </div>
-      <div>
-        <ul class="other-games-row">
-          
           <li>
+            <a routerLink="/details">
             <img
               src="https://gameday.bg/wp-content/uploads/2020/11/nier-automata-goty-pc-01.jpg"
               alt="Nier_Automata"
             />
+            </a>
             <p>Nier: Automata</p>
           </li>
-          
+    
           <li>
+            <a routerLink="/details">
             <img
               src="https://blog.playstation.com/uploads/2024/01/bb4d6dc48cb2b4613432dfc197c0081a26474c2c.jpeg"
               alt="Horizon_Forbidden_West"
             />
+            </a>
             <p>Horizon Forbidden West</p>
           </li>
           <li>
+            <a routerLink="/details">
             <img
               src="https://s3.amazonaws.com/prod-media.gameinformer.com/styles/product_box_art/s3/2018/07/26/a87590d4/uncharted4.jpg"
               alt="Uncharted_4"
             />
+            </a>
             <p>Uncharted 4</p>
           </li>
           <li>
+            <a routerLink="/details">
             <img
               src="https://cdn1.epicgames.com/offer/3ddd6a590da64e3686042d108968a6b2/EGS_GodofWar_SantaMonicaStudio_S2_1200x1600-fbdf3cbc2980749091d52751ffabb7b7_1200x1600-fbdf3cbc2980749091d52751ffabb7b7"
               alt="God_Of_War"
             />
+            </a>
             <p>God of War</p>
           </li>
           <li>
+            <a routerLink="/details">
             <img
               src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S2_03_1200x1600-b1847981214ac013383111fc457eb9c5"
               alt="Cyberpunk_2077"
             />
+            </a>
             <p>Cyberpunk 2077</p>
           </li>
-        </ul>
-      </div>
-      <div>
-        <ul class="other-games-row">
           
           <li>
+            <a routerLink="/details">
             <img
               src="https://gameday.bg/wp-content/uploads/2020/11/nier-automata-goty-pc-01.jpg"
               alt="Nier_Automata"
             />
+            </a>
             <p>Nier: Automata</p>
           </li>
-          
+    
           <li>
+            <a routerLink="/details">
             <img
               src="https://blog.playstation.com/uploads/2024/01/bb4d6dc48cb2b4613432dfc197c0081a26474c2c.jpeg"
               alt="Horizon_Forbidden_West"
             />
+            </a>
             <p>Horizon Forbidden West</p>
           </li>
           <li>
+            <a routerLink="/details">
             <img
               src="https://s3.amazonaws.com/prod-media.gameinformer.com/styles/product_box_art/s3/2018/07/26/a87590d4/uncharted4.jpg"
               alt="Uncharted_4"
             />
+            </a>
             <p>Uncharted 4</p>
           </li>
           <li>
+            <a routerLink="/details">
             <img
               src="https://cdn1.epicgames.com/offer/3ddd6a590da64e3686042d108968a6b2/EGS_GodofWar_SantaMonicaStudio_S2_1200x1600-fbdf3cbc2980749091d52751ffabb7b7_1200x1600-fbdf3cbc2980749091d52751ffabb7b7"
               alt="God_Of_War"
             />
+            </a>
             <p>God of War</p>
           </li>
           <li>
+            <a routerLink="/details">
             <img
               src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S2_03_1200x1600-b1847981214ac013383111fc457eb9c5"
               alt="Cyberpunk_2077"
             />
+            </a>
             <p>Cyberpunk 2077</p>
           </li>
         </ul>
       </div>
+     
 
 
 
