Minor Styling and bug fixes

--- a/playtopia/src/app/core/nav/nav.component.html
+++ b/playtopia/src/app/core/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="left-item">
-    <a routerLink="/home">
+    <a routerLink="/">
       <img src="../../../assets/Logo nav.png" alt="Logo" />
     </a>
   </div>
