--- a/playtopia/src/app/login/login.component.html
+++ b/playtopia/src/app/login/login.component.html
@@ -23,6 +23,8 @@
           />
           <input type="submit" value="Login" id="button" />
         </form>
+        <p>Don't have an account ?</p>
+        <p id="register_p" routerLink="/register">Register !</p>
       </div>
     </div>
   </main>
