--- a/playtopia/src/app/register/register.component.html
+++ b/playtopia/src/app/register/register.component.html
@@ -40,7 +40,7 @@
           <input type="submit" value="Register" id="button" />
         </form>
         <p>Already have an account ?</p>
-        <p id="login_p" routerLink="/login">Loging</p>
+        <p id="login_p" routerLink="/login">Loging !</p>
       </div>
     </div>
   </main>
