Game module and game Routing function Created

--- a/playtopia/src/app/game/add-game/add-game.component.css
+++ b/playtopia/src/app/game/add-game/add-game.component.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../../assets/BANNER_form.png");
+    background-image: url("../../../assets/BANNER_form.png");
     background-size:cover;
   }
   
