--- a/playtopia/src/app/game/add-game/add-game.component.html
+++ b/playtopia/src/app/game/add-game/add-game.component.html
@@ -38,7 +38,7 @@
             <input type="submit" value="Submit" class="button" />
           </form>
         </div>
-        <img src="../../assets/Logo nav.png" alt="" />
+        <img src="../../../assets/Logo nav.png" alt="" />
       </div>
     </div>
   </body>
