--- a/playtopia/src/app/game/detail/detail.component.css
+++ b/playtopia/src/app/game/detail/detail.component.css
@@ -4,7 +4,7 @@ html {
   margin: 0;
   display: flex;
   align-items: center;
-  background-image: url("../../assets/BackGroud.png");
+  background-image: url("../../../assets/BackGroud.png");
 }
 
 main {
