User component and user routing function created

--- a/playtopia/src/app/user/login/login.component.html
+++ b/playtopia/src/app/user/login/login.component.html
@@ -2,7 +2,7 @@
   <main>
     <div class="register_el">
       <div class="image-el">
-        <img src="../../assets/Register_page.jpg" alt="register_image" />
+        <img src="../../../assets/Register_page.jpg" alt="register_image" />
       </div>
       <div class="form_el">
         <form action="">
