--- a/playtopia/src/app/user/register/register.component.html
+++ b/playtopia/src/app/user/register/register.component.html
@@ -2,7 +2,7 @@
   <main>
     <div class="register_el">
       <div class="image-el">
-        <img src="../../assets/Register_page.jpg" alt="register_image" />
+        <img src="../../../assets/Register_page.jpg" alt="register_image" />
       </div>
       <div class="form_el">
         <form action="">
@@ -40,7 +40,7 @@
           <input type="submit" value="Register" id="button" />
         </form>
         <p>Already have an account ?</p>
-        <p id="login_p" routerLink="/login">Loging !</p>
+        <p id="login_p" routerLink="/login">Login !</p>
       </div>
     </div>
   </main>
