--- a/playtopia/src/app/user/register/register.component.css
+++ b/playtopia/src/app/user/register/register.component.css
@@ -4,7 +4,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("../../assets/BackGroud.png");
+  background-image: url("../../../assets/BackGroud.png");
 }
 
 main {
