--- a/playtopia/src/app/error/error.component.html
+++ b/playtopia/src/app/error/error.component.html
@@ -1,1 +1,15 @@
-<p>error works!</p>
+<body>
+  <main>
+    <div class="about_container">
+      <img src="../../assets/Error_Page.jpg" alt="" />
+      <div>
+        <p>
+          Uh-oh, it looks like you've wandered off the map!How did you stumbled
+          into this pixelated wilderness. We'll have you back in the site before
+          you can say, "But I had the high score!"
+        </p>
+        <button routerLink="/">Respawn Home</button>
+      </div>
+    </div>
+  </main>
+</body>
