--- a/playtopia/src/app/user/register/register.component.css
+++ b/playtopia/src/app/user/register/register.component.css
@@ -75,8 +75,8 @@ label {
 }
 
 #button {
-  margin-top: 20px;
-
+  margin: 20px;
+  font-size: 50px;
   border: 5px solid rgb(0, 0, 0);
   border-radius: 20px;
   background-color: #3c5d61;
