--- a/playtopia/src/app/user/register/register.component.html
+++ b/playtopia/src/app/user/register/register.component.html
@@ -5,7 +5,7 @@
         <img src="../../../assets/Register_page.jpg" alt="register_image" />
       </div>
       <div class="form_el">
-        <form #loginForm="ngForm" (ngSubmit)="formSubmitHandler(loginForm)">
+        <form #RegisterForm="ngForm" (ngSubmit)="formSubmitHandler(RegisterForm)">
           <label for="username">Username:</label>
           <div class="form-group">
             <input
@@ -14,6 +14,7 @@
               name="username"
               placeholder="gamer123..."
               ngModel
+              #usernameInput="ngModel"
             />
           </div>
 
