--- a/playtopia/src/app/core/nav/nav.component.css
+++ b/playtopia/src/app/core/nav/nav.component.css
@@ -34,6 +34,7 @@ nav {
     text-decoration: none;
     font-size: 30px;
     font-family: "Agbalumo", system-ui;
+    cursor: pointer;
   }
   nav ul li img {
     filter: invert(100%);
